# home-sensors-measurements-server

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  dev.env  pyproject.toml
alembic/: env.py
alembic/versions/: 0843a59fba37_init.py  14dfab389591_init.py  29e600b7958c_init.py
app/: main.py
app/api/: router.py
app/api/data/: router.py
app/api/data/dependencies/: color_deps.py  strain_and_weight_deps.py
app/api/data/endpoints/: color.py  flow_and_level.py  humidity.py  light.py  pressure.py  smoke_gas_alcohol.py  strain_and_weight.py  temperature.py
app/api/graphs/: router.py
app/core/: main_events.py  settings.py
app/core/configurations/: app.py  development.py  production.py  test.py
app/crud/: __init__.py  base.py  color.py  flow_and_level.py  humidity.py  light.py  pressure.py  smoke_gas_alcohol.py  strain_and_weight.py  temperature.py
app/models/: __init__.py  base_measurement_model.py  color.py  flow_and_level.py  humidity.py  light.py  pressure.py  smoke_gas_alcohol.py  strain_and_weight.py  temperature.py
app/schemas/: __init__.py  color_schema.py  flow_and_level_schema.py  humidity_schema.py  light_schema.py  pressure_schema.py  response_schema.py  smoke_gas_alcohol_schema.py  strain_and_weight_schema.py  temperature_schema.py
app/utils/: base_measurement_model.py  base_model.py  cleanup.py  date_format.py  exceptions.py  graph.py  insert_test_data.py  partial.py  session.py
app/utils/checks/: __init__.py  board_checks.py  measurement_type_checks.py  sensor_checks.py
app/utils/graphs/: graph.py  graph_params.py
(+24 files in other folders)
